--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -15,6 +15,7 @@
   {{ metatags }}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com; style-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com fonts.googleapis.com; img-src 'self' data:; media-src 'self'; font-src 'self' fonts.googleapis.com;">
+  <meta name="google-site-verification" content="APUET_EdyP7TtgYTR2_c_H45rvv4R5BtUEACJDSm_lY" />
   {% block htmltitle %}
 	<title>{{ title|striptags|e }}{{ titlesuffix|replace('master documentation', '') }}</title>
   {% endblock %}
