--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -24,6 +24,10 @@
   {% if favicon %}
     <link rel="shortcut icon" href="{{ pathto('_static/' + favicon, 1) }}"/>
   {% endif %}
+  {# CANONICAL URL #}
+  {% if theme_canonical_url %}
+    <link rel="canonical" href="{{ theme_canonical_url }}{{ pagename }}.html"/>
+  {% endif %}
 
   {# CSS #}
 
@@ -129,7 +133,6 @@
           {% endif %}
         {% endblock %}
       </div>
-      &nbsp;
     </nav>
 
     <section data-toggle="wy-nav-shift" class="wy-nav-content-wrap">
@@ -175,7 +178,6 @@
 
   </div>
   {% include "versions.html" %}
-
 </main>
 
   {% if not embedded %}
