Restore navbar but link to the new blog

--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -94,14 +94,12 @@
 					data-toggle='collapse' data-target='#collapse'>
 					<i class='fa fa-lg fa-bars'></i>					
 				</button>
-				<a class='navbar-brand' href='/angels-of-clockwork/'>EPK</a>
+				<a class='navbar-brand' href='/index.html'>LGNH</a>
 			</div>
 
 			<div class='collapse navbar-collapse' id='collapse'>
 				<ul class='nav navbar-nav'>
-					<li><a href='/angels-of-clockwork/'>Home</a></li>
-                    <li><a href='/angels-of-clockwork/audio.html'>Music</a></li>
-					<li class='active'><a href='/angels-of-clockwork/linux-guide-and-hints/build/html/'>Wiki</a></li>
+					<li><a href='https://security.linuxguideandhints.com/'>Infosecurity Blog</a></li>
 				</ul>
 			</div>
 		</div>
