--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -102,6 +102,7 @@
 			<div class='collapse navbar-collapse' id='collapse'>
 				<ul class='nav navbar-nav'>
 					<li><a href='https://security.linuxguideandhints.com/'>Infosecurity Blog</a></li>
+                    <li><a href='https://www.howtoclosevim.com/'>howtoclosevim.com</a></li>
 				</ul>
 			</div>
 		</div>
