--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -16,6 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests; default-src 'self'; script-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com; style-src 'self' maxcdn.bootstrapcdn.com fonts.googleapis.com; img-src 'self' data:; media-src 'self'; font-src 'self' maxcdn.bootstrapcdn.com fonts.gstatic.com fonts.googleapis.com;">
   <meta name="google-site-verification" content="APUET_EdyP7TtgYTR2_c_H45rvv4R5BtUEACJDSm_lY" />
+  <meta name="description" content="Tutorials and generally useful information regarding packages and system administration in Fedora® and CentOS®.">
   {% block htmltitle %}
   <title>{{ title|striptags|e }}{{ titlesuffix }}</title>
   {% endblock %}
