--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
   {{ metatags }}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests; default-src 'self'; script-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com; style-src 'self' maxcdn.bootstrapcdn.com fonts.googleapis.com; img-src 'self' data: https://abload.de/img/16-bit-no-dithert9bx7.png https://abload.de/img/32-bitpiy55.png; media-src 'self'; font-src 'self' maxcdn.bootstrapcdn.com fonts.gstatic.com fonts.googleapis.com;">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests; default-src 'self'; script-src 'self' maxcdn.bootstrapcdn.com; style-src 'self' maxcdn.bootstrapcdn.com fonts.googleapis.com; img-src 'self' data: https://abload.de/img/16-bit-no-dithert9bx7.png https://abload.de/img/32-bitpiy55.png; media-src 'self'; font-src 'self' maxcdn.bootstrapcdn.com fonts.gstatic.com fonts.googleapis.com;">
   <meta name="google-site-verification" content="APUET_EdyP7TtgYTR2_c_H45rvv4R5BtUEACJDSm_lY" />
   {% if pagename == "index" %}
     <meta name="description" content="Tutorials and generally useful information regarding packages and system administration in Fedora® and CentOS®.">
@@ -210,16 +210,7 @@
 
   {% if not embedded %}
 
-    <script type="text/javascript">
-        var DOCUMENTATION_OPTIONS = {
-            URL_ROOT:'{{ url_root }}',
-            VERSION:'{{ release|e }}',
-            COLLAPSE_INDEX:false,
-            FILE_SUFFIX:'{{ '' if no_search_suffix else file_suffix }}',
-            HAS_SOURCE:  {{ has_source|lower }},
-            SOURCELINK_SUFFIX: '{{ sourcelink_suffix }}'
-        };
-    </script>
+    <script type="text/javascript" src="_static/js/documentation_options.js?URL_ROOT={{ url_root }}&VERSION={{ release|e }}&COLLAPSE_INDEX=false&FILE_SUFFIX={{ '' if no_search_suffix else file_suffix }}&HAS_SOURCE={{ has_source|lower }}&SOURCELINK_SUFFIX={{ sourcelink_suffix }}"></script>
     {%- for scriptfile in script_files %}
       <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
     {%- endfor %}
