Display collapsed nav if JavaScript is disabled

--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -84,6 +84,10 @@
   {%- endblock %}
   {%- block extrahead %} {% endblock %}
 
+  <noscript>
+      <link rel="stylesheet" href="{{ pathto('_static/css/nojs.css', 1) }}" type="text/css">
+  </noscript>
+
 </head>
 
 <body class="wy-body-for-nav" role="document">
