Add donation link

--- a/source/themes/sphinx_rtd_theme/footer.html
+++ b/source/themes/sphinx_rtd_theme/footer.html
@@ -44,7 +44,7 @@
     {%- endif %}
 
     </p>
-		<p>This site is not affiliated with or endorsed by the Fedora Project, nor the CentOS project</p>
+    <p>This site is not affiliated with or endorsed by the Fedora Project, nor the CentOS project. If you would like to support us, please <a href="https://www.paypal.me/linuxguideandhints">donate</a>.</p>
   </div>
 
   {%- if show_sphinx %}
