--- a/source/themes/sphinx_rtd_theme/footer.html
+++ b/source/themes/sphinx_rtd_theme/footer.html
@@ -1,18 +1,14 @@
 <footer>
-	{% if next or prev %}
-	<div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
-		{% if next %}
-		<a href="{{ next.link|e }}" class="btn btn-default pull-right" accesskey="n">
-			{{ next.title|striptags|e }} <span class="fa fa-arrow-circle-right"></span>
-		</a>
-		{% endif %}
-		{% if prev %}
-		<a href="{{ prev.link|e }}" class="btn btn-default" accesskey="p">
-			<span class="fa fa-arrow-circle-left"></span> {{ prev.title|striptags|e }}
-		</a>
-		{% endif %}
-	</div>
-	{% endif %}
+  {% if (theme_prev_next_buttons_location == 'bottom' or theme_prev_next_buttons_location == 'both') and (next or prev) %}
+    <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
+      {% if next %}
+        <a href="{{ next.link|e }}" class="btn btn-neutral float-right" title="{{ next.title|striptags|e }}" accesskey="n" rel="next">{{ _('Next') }} <span class="fa fa-arrow-circle-right"></span></a>
+      {% endif %}
+      {% if prev %}
+        <a href="{{ prev.link|e }}" class="btn btn-neutral" title="{{ prev.title|striptags|e }}" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> {{ _('Previous') }}</a>
+      {% endif %}
+    </div>
+  {% endif %}
 
   <hr/>
 
@@ -51,6 +47,7 @@
   {% trans %}Built with <a href="http://sphinx-doc.org/">Sphinx</a> using a heavily customized version of <a href="https://github.com/snide/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>{% endtrans %}.
   {%- endif %}
 
+  {%- block extrafooter %} {% endblock %}
 
 </footer>
 
