--- a/source/themes/sphinx_rtd_theme/footer.html
+++ b/source/themes/sphinx_rtd_theme/footer.html
@@ -40,7 +40,7 @@
     {%- endif %}
 
     </p>
-    <p>This site is not affiliated with or endorsed by the Fedora Project, nor the CentOS project. If you would like to support us, please <a href="https://www.paypal.me/linuxguideandhints">donate</a>.</p>
+    <p>This site is not affiliated with or endorsed by the Fedora Project, nor the CentOS project.</p>
   </div>
 
   {%- if show_sphinx %}
