--- a/source/themes/sphinx_rtd_theme/searchbox.html
+++ b/source/themes/sphinx_rtd_theme/searchbox.html
@@ -1,9 +1,9 @@
 {%- if builder != 'singlehtml' %}
-<div role="search">
-  <form id="rtd-search-form" class="wy-form" action="{{ pathto('search') }}" method="get">
-    <input type="text" name="q" placeholder="{{ _('Search docs') }}" />
-    <input type="hidden" name="check_keywords" value="yes" />
-    <input type="hidden" name="area" value="default" />
-  </form>
-</div>
+<form id="rtd-search-form" class="wy-form" action="{{ pathto('search') }}" method="get">
+    <div role="search" class="form-group">
+        <input type="text" class="form-control" name="q" placeholder="{{ _('Search docs') }}" />
+        <input type="hidden" name="check_keywords" value="yes" />
+        <input type="hidden" name="area" value="default" />
+    </div>
+</form>
 {%- endif %}
