--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   {{ metatags }}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests; default-src 'self'; script-src 'self' stackpath.bootstrapcdn.com; style-src 'self' stackpath.bootstrapcdn.com; img-src 'self'; media-src 'self'; font-src 'self' stackpath.bootstrapcdn.com;">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests; default-src 'self'; style-src 'self' stackpath.bootstrapcdn.com; img-src 'self'; media-src 'self'; font-src 'self' stackpath.bootstrapcdn.com;">
   {% if pagename == "index" %}
     <meta name="description" content="Tutorials and generally useful information regarding packages and system administration in Fedora® and CentOS®.">
   {% endif %}
@@ -90,23 +90,6 @@
 
 <body class="wy-body-for-nav" role="document">
 
-	<nav class='navbar navbar-inverse'>
-		<div class='container'>
-			<div class='navbar-header'>
-				<button type='button' class='navbar-toggle collapsed'
-					data-toggle='collapse' data-target='#collapse'>
-					<i class='fa fa-lg fa-bars'></i>					
-				</button>
-				<a class='navbar-brand' href='/index.html'>LGNH</a>
-			</div>
-
-            <div class='navbar-form navbar-left'>
-                {% include "searchbox.html" %}
-            </div>
-		</div>
-	</nav>
- 
-
 <main id='main'>
 
   {% block extrabody %} {% endblock %}
@@ -144,7 +127,8 @@
             {% endif %}
           {% endif %}
 
-          
+          {% include "searchbox.html" %}
+
           {% endblock %}
         </div>
 
