--- a/source/themes/sphinx_rtd_theme/searchbox.html
+++ b/source/themes/sphinx_rtd_theme/searchbox.html
@@ -1,7 +1,7 @@
 {%- if builder != 'singlehtml' %}
 <form id="rtd-search-form" class="wy-form" action="{{ pathto('search') }}" method="get">
-    <div role="search" class="form-group">
-        <input type="text" class="form-control" name="q" placeholder="{{ _('Search docs') }}" />
+    <div role="search">
+        <input type="text" name="q" placeholder="{{ _('Search docs') }}" />
         <input type="hidden" name="check_keywords" value="yes" />
         <input type="hidden" name="area" value="default" />
     </div>
