Minify prism.js (#1)

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -1,7 +1,7 @@
 {% extends "!layout.html" %}
 
 {% set script_files = script_files + [
-		'_static/js/prism.js'
+		'_static/js/prism.min.js'
 	] %}
 
 {% set css_files = css_files + [
