--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -199,19 +199,19 @@
 
   {% if not embedded %}
 
-  <script type="text/javascript" id="documentation_options" data-url_root="{{ pathto('', 1) }}" src="{{ pathto('_static/js/documentation_options.js', 1) }}"></script>
+  <script type="text/javascript" id="documentation_options" data-url_root="{{ pathto('', 1) }}" src="{{ pathto('_static/js/documentation_options.js', 1) }}" defer></script>
     {%- for scriptfile in script_files %}
-      <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
+      <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}" defer></script>
     {%- endfor %}
 
   {% endif %}
 
   {# RTD hosts this file, so just load on non RTD builds #}
   {% if not READTHEDOCS %}
-    <script type="text/javascript" src="{{ pathto('_static/js/theme.js', 1) }}"></script>
+    <script type="text/javascript" src="{{ pathto('_static/js/theme.js', 1) }}" defer></script>
   {% endif %}
 
-  <script type="text/javascript" src="{{ pathto('_static/js/stickynav.js', 1) }}"></script>
+  <script type="text/javascript" src="{{ pathto('_static/js/stickynav.js', 1) }}" defer></script>
 
   {%- block footer %} {% endblock %}
 
