--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -2,7 +2,8 @@
 
 {% set script_files = script_files + [
         '_static/js/prism.min.js',
-        '_static/js/quicklink.min.js'
+        '_static/js/quicklink.umd.js',
+        '_static/js/invoke_quicklink.min.js'
     ] %}
 
 {% set css_files = css_files + [
