Remove quicklink and rocketloader

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -1,9 +1,7 @@
 {% extends "!layout.html" %}
 
 {% set script_files = script_files + [
-        '_static/js/prism.min.js',
-        '_static/js/quicklink.umd.js',
-        '_static/js/invoke_quicklink.min.js'
+        '_static/js/prism.min.js'
     ] %}
 
 {% set css_files = css_files + [
