--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -5,6 +5,6 @@
     ] %}
 
 {% set css_files = css_files + [
-        '_static/css/prism.css',
-        '_static/css/style.css'
+        '_static/css/prism.min.css',
+        '_static/css/style.min.css'
     ] %}
