--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -1,10 +1,13 @@
 {% extends "!layout.html" %}
 
 {% set script_files = script_files + [
-        '_static/js/prism.min.js'
+        '_static/js/prism.min.js',
+        '_static/js/components/prism-bash.min.js',
+        '_static/js/components/prism-docker.min.js',
+        '_static/js/prism-freeipa.min.js'
     ] %}
 
 {% set css_files = css_files + [
-        '_static/css/prism.min.css',
+        '_static/css/prism-okaidia.min.css',
         '_static/css/style.min.css'
     ] %}
