--- a/source/_templates/page.html
+++ b/source/_templates/page.html
@@ -1,7 +1,7 @@
-{% set css_files = css_files + ["static/custom.css"] %}
+{% set css_files = css_files + ["_static/custom.css"] %}
 
 {%- block extrahead %}
- <script type="text/javascript">
+<script type="text/javascript">
     $(document).ready(function() {
         //
         //
