--- a/source/_templates/page.html
+++ b/source/_templates/page.html
@@ -1,5 +1,6 @@
 {% set css_files = css_files + ["_static/custom.css"] %}
 
+{% extends "!layout.html" %}
 {%- block extrahead %}
 <script type="text/javascript">
     $(document).ready(function() {
