--- a/source/themes/sphinx_theme/layout.html
+++ b/source/themes/sphinx_theme/layout.html
@@ -4,10 +4,12 @@
         '_static/js/prism.min.js',
         '_static/js/components/prism-bash.min.js',
         '_static/js/components/prism-docker.min.js',
-        '_static/js/prism-freeipa.min.js'
+        '_static/js/prism-freeipa.min.js',
+        '_static/js/toggle.js'
     ] %}
 
 {% set css_files = css_files + [
         '_static/css/prism-okaidia.min.css',
-        '_static/css/style.min.css'
+        '_static/css/style.min.css',
+        '_static/css/toggle.css'
     ] %}
