Add disclaimer back to footer.

--- a/source/themes/sphinx_theme/sphinx_rtd_theme/footer.html
+++ b/source/themes/sphinx_theme/sphinx_rtd_theme/footer.html
@@ -43,6 +43,7 @@
     {%- endif %}
 
     </p>
+    <p>We are not affiliated with RedHat, Fedora, Rocky Linux or CentOS.</p>
   </div>
 
   {%- if show_sphinx %}
