--- a/source/themes/sphinx_theme/sphinx_rtd_theme/footer.html
+++ b/source/themes/sphinx_theme/sphinx_rtd_theme/footer.html
@@ -43,7 +43,10 @@
     {%- endif %}
 
     </p>
-    <p>We are not affiliated with RedHat, Fedora, Rocky Linux or CentOS.</p>
+    <p>We are not affiliated with Red Hat&reg;, Fedora&reg;, Rocky Linux&reg; or CentOS&reg;.</p>
+    <p>Red Hat&reg;, Fedora&reg; and CentOS&reg;are registered trademarks of Red Hat, Inc. in the United States and other countries.</p>
+    <p>Rocky Linux&reg; is a registered trademark of the Rocky Enterprise Software Foundation. Inc. in the United States.</p>
+    <p>
   </div>
 
   {%- if show_sphinx %}
