--- a/source/themes/sphinx_theme/sphinx_rtd_theme/footer.html
+++ b/source/themes/sphinx_theme/sphinx_rtd_theme/footer.html
@@ -44,7 +44,8 @@
 
     </p>
     <p>We are not affiliated with Red Hat&reg;, Fedora&reg;, Rocky Linux&reg; or CentOS&reg;.</p>
-    <p>Red Hat&reg;, Fedora&reg; and CentOS&reg;are registered trademarks of Red Hat, Inc. in the United States and other countries.</p>
+    <p>Red Hat&reg;, Fedora&reg; and CentOS&reg; are registered trademarks of Red Hat, Inc. in the United States and other countries.</p>
+    <p>Linux&reg; is the registered trademark of Linus Torvalds in the U.S. and other countries.</p>
     <p>Rocky Linux&reg; is a registered trademark of the Rocky Enterprise Software Foundation. Inc. in the United States.</p>
     <p>
   </div>
