Make footer text small

--- a/source/themes/sphinx_theme/sphinx_rtd_theme/footer.html
+++ b/source/themes/sphinx_theme/sphinx_rtd_theme/footer.html
@@ -43,11 +43,7 @@
     {%- endif %}
 
     </p>
-    <p>We are not affiliated with Red Hat&reg;, Fedora&reg;, Rocky Linux&reg; or CentOS&reg;.</p>
-    <p>Red Hat&reg;, Fedora&reg; and CentOS&reg; are registered trademarks of Red Hat, Inc. in the United States and other countries.</p>
-    <p>Linux&reg; is the registered trademark of Linus Torvalds in the U.S. and other countries.</p>
-    <p>Rocky Linux&reg; is a registered trademark of the Rocky Enterprise Software Foundation. Inc. in the United States.</p>
-    <p>
+    <p><small>We are not affiliated with Red Hat&reg;, Fedora&reg;, Rocky Linux&reg; or CentOS&reg;. Red Hat&reg;, Fedora&reg; and CentOS&reg; are registered trademarks of Red Hat, Inc. in the United States and other countries. Linux&reg; is the registered trademark of Linus Torvalds in the U.S. and other countries. Rocky Linux&reg; is a registered trademark of the Rocky Enterprise Software Foundation. Inc. in the United States.</small></p>
   </div>
 
   {%- if show_sphinx %}
