--- a/source/themes/sphinx_theme/sphinx_rtd_theme/searchbox.html
+++ b/source/themes/sphinx_theme/sphinx_rtd_theme/searchbox.html
@@ -1,9 +1,9 @@
-{%- if builder != 'singlehtml' %}
-<form id="rtd-search-form" class="wy-form" action="{{ pathto('search') }}" method="get">
-    <div role="search">
-        <input type="text" aria-label="Search docs" name="q" placeholder="{{ _('Search docs') }}" />
-        <input type="hidden" name="check_keywords" value="yes" />
-        <input type="hidden" name="area" value="default" />
-    </div>
-</form>
+{%- if 'singlehtml' not in builder %}
+<div role="search">
+  <form id="rtd-search-form" class="wy-form" action="{{ pathto('search') }}" method="get">
+    <input type="text" name="q" placeholder="{{ _('Search docs') }}" />
+    <input type="hidden" name="check_keywords" value="yes" />
+    <input type="hidden" name="area" value="default" />
+  </form>
+</div>
 {%- endif %}
