Don't need to whitelist github anymore

--- a/source/themes/sphinx_theme/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_theme/sphinx_rtd_theme/layout.html
@@ -14,7 +14,7 @@
 <head>
   <meta charset="utf-8" />
   {{ metatags }}
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests; default-src 'self'; style-src 'self' https://github.githubassets.com/ cdn.jsdelivr.net; script-src 'self'; img-src 'self'; media-src 'self'; font-src 'self' cdn.jsdelivr.net;">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests; default-src 'self'; style-src 'self' cdn.jsdelivr.net; script-src 'self'; img-src 'self'; media-src 'self'; font-src 'self' cdn.jsdelivr.net;">
   {% if pagename == "index" %}
     <meta name="description" content="Tutorials and generally useful information regarding packages and system administration in Fedora® and CentOS®.">
   {% endif %}
