Minify CSS/JavaScript files

--- a/source/themes/sphinx_theme/layout.html
+++ b/source/themes/sphinx_theme/layout.html
@@ -1,13 +1,9 @@
 {% extends "!sphinx_rtd_theme/layout.html" %}
 
 {% set script_files = script_files + [
-        '_static/js/prism.js',
-        '_static/js/components/prism-bash.min.js',
-        '_static/js/components/prism-docker.min.js',
-        '_static/js/prism-freeipa.js'
+        '_static/js/bundle.min.js'
     ] %}
 
 {% set css_files = css_files + [
-        '_static/css/prism-okaidia.css',
-        '_static/css/style.css'
+        '_static/css/bundle.min.css'
     ] %}
