--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -109,41 +109,43 @@
   <div class="wy-grid-for-nav">
     {# SIDE NAV, TOGGLES ON MOBILE #}
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
-      <div class="wy-side-scroll">
-        <div class="wy-side-nav-search" {% if theme_style_nav_header_background %} style="background: {{theme_style_nav_header_background}}" {% endif %}>
-          {% block sidebartitle %}
+      <div class="wy-side-nav-search" {% if theme_style_nav_header_background %} style="background: {{theme_style_nav_header_background}}" {% endif %}>
+        {% block sidebartitle %}
 
-          {% if logo and theme_logo_only %}
-            <a href="{{ pathto(master_doc) }}">
-          {% else %}
-            <a href="{{ pathto(master_doc) }}" class="icon icon-home"> {{ project }}
-          {% endif %}
+        {% if logo and theme_logo_only %}
+          <a href="{{ pathto(master_doc) }}">
+        {% else %}
+          <a href="{{ pathto(master_doc) }}"> {{ project }}
+        {% endif %}
 
+        {% if pagename == "index" %}
           {% if logo %}
             {# Not strictly valid HTML, but it's the only way to display/scale
                it properly, without weird scripting or heaps of work
             #}
             <img src="{{ pathto('_static/img/' + logo, 1) }}" class="logo" alt="{{ _('Logo') }}"/>
           {% endif %}
-          </a>
+        {% endif %}
+        </a>
 
-          {% if theme_display_version %}
-            {%- set nav_version = version %}
-            {% if READTHEDOCS and current_version %}
-              {%- set nav_version = current_version %}
-            {% endif %}
-            {% if nav_version %}
-              <div class="version">
-                {{ nav_version }}
-              </div>
-            {% endif %}
+        {% if display_version %}
+          {%- set nav_version = version %}
+          {% if READTHEDOCS and current_version %}
+            {%- set nav_version = current_version %}
           {% endif %}
+          {% if nav_version %}
+            <div class="version">
+              {{ nav_version }}
+            </div>
+          {% endif %}
+        {% endif %}
 
-          {% include "searchbox.html" %}
+        {% include "searchbox.html" %}
 
-          {% endblock %}
-        </div>
+        {% endblock %}
+      </div>
 
+      <div class="wy-side-scroll">
         {% block navigation %}
         <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
           {% block menu %}
@@ -157,12 +159,8 @@
                                           includehidden=theme_includehidden|tobool,
                                           titles_only=theme_titles_only|tobool) %}
             {% endif %}
-            {% if global_toc %}
-              {{ global_toc }}
-            {% else %}
               <!-- Local TOC -->
-              <div class="local-toc">{{ toc }}</div>
-            {% endif %}
+            <div class="local-toc">{{ toc }}</div>
           {% endblock %}
         </div>
         {% endblock %}
