Update copyright information

--- a/source/themes/sphinx_rtd_theme/footer.html
+++ b/source/themes/sphinx_rtd_theme/footer.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2013-2018 Dave Snider, Read the Docs, Inc. & contributors
+
+SPDX-License-Identifier: MIT
+-->
+
 <footer>
   {%- if (theme_prev_next_buttons_location == 'bottom' or theme_prev_next_buttons_location == 'both') and (next or prev) %}
     {#- Translators: This is an ARIA section label for the footer section of the page. -#}
