--- a/source/themes/sphinx_rtd_theme/layout_old.html
+++ b/source/themes/sphinx_rtd_theme/layout_old.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2013-2018 Dave Snider, Read the Docs, Inc. & contributors
+
+SPDX-License-Identifier: MIT
+-->
+
 {#
     basic/layout.html
     ~~~~~~~~~~~~~~~~~
