--- a/source/themes/sphinx_rtd_theme/breadcrumbs.html
+++ b/source/themes/sphinx_rtd_theme/breadcrumbs.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2013-2018 Dave Snider, Read the Docs, Inc. & contributors
+
+SPDX-License-Identifier: MIT
+-->
+
 {%- if meta is defined and meta is not none %}
    {%- set check_meta = True %}
 {%- else %}
