--- a/source/themes/sphinx_rtd_theme/layout.html
+++ b/source/themes/sphinx_rtd_theme/layout.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2013-2018 Dave Snider, Read the Docs, Inc. & contributors
+
+SPDX-License-Identifier: MIT
+-->
+
 {# TEMPLATE VAR SETTINGS #}
 {%- set url_root = pathto('', 1) %}
 {%- if url_root == '#' %}{% set url_root = '' %}{% endif %}
