--- a/source/themes/sphinx_rtd_theme/searchbox.html
+++ b/source/themes/sphinx_rtd_theme/searchbox.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2013-2018 Dave Snider, Read the Docs, Inc. & contributors
+
+SPDX-License-Identifier: MIT
+-->
+
 {%- if 'singlehtml' not in builder %}
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="https://duckduckgo.com/" method="get">
