--- a/source/themes/sphinx_rtd_theme/versions.html
+++ b/source/themes/sphinx_rtd_theme/versions.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2013-2018 Dave Snider, Read the Docs, Inc. & contributors
+
+SPDX-License-Identifier: MIT
+-->
+
 {% if READTHEDOCS %}
 {# Add rst-badge after rst-versions for small badge style. #}
   <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="{{ _('Versions') }}">
